# MSOpenGLES3

./: readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/meishe/msopengles3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: burnpagef.glsl  burnpagev.glsl  cubef.glsl  cubev.glsl  fragment.frag  hightlightsf.glsl  imagefadef.glsl  mosaicf.glsl  transitionf.glsl  transitionv.glsl  vertex.vert  waterf.glsl  yuvplayf.glsl  yuvplayv.glsl
app/src/main/cpp/: CMakeLists.txt  ImageDef.h  MSAVCodecHandler.cpp  MSAVCodecHandler.h  MSAudioPlayer.cpp  MSAudioPlayer.h  MSBaseSample.h  MSBurnPageSample.cpp  MSBurnPageSample.h  MSFrameBufferObject.cpp  MSFrameBufferObject.h  MSGLCommonDef.h  MSGLTexture.cpp  MSGLVideoRender.cpp  MSGLVideoRender.h  MSHighLightSample.cpp  MSHighLightSample.h  MSImage.cpp  MSImage.h  MSNDKGLESRender.cpp  MSNDKGLESRender.h  MSOpenGLBuffer.h  MSOpenGLShader.cpp  MSOpenGLShader.h  MSQueueDef.h  MSTransitionSample.cpp  MSTransitionSample.h  MSVAOSample.cpp  MSVAOSample.h  MSYUVDataDefine.h  OpenSLInterface.c  android_log_util.h  ms_capture_jni_helper.cpp  ms_opengl_jni_helper.cpp  ms_player_jni_helper.cpp
app/src/main/cpp/ms_opengles/: MSFrameBufferObject.cpp  MSGLCommonDef.h  MSGLTexture.cpp  MSGLTexture.h  MSNDKGLESRender.cpp  MSNDKGLESRender.h  MSOpenGLBuffer.cpp  MSOpenGLShader.cpp  MSOpenGLShader.h  MSOpenGLVAO.cpp  MSOpenGLVAO.h
app/src/main/cpp/ms_video_player/: MSAVCodecHandler.cpp  MSAVCodecHandler.h  MSAudioPlayer.cpp  MSAudioPlayer.h  MSGLVideoRender.cpp  MSGLVideoRender.h  OpenSLInterface.c  OpenSLInterface.h
app/src/main/cpp/sample/: MSBaseSample.h  MSBurnPageSample.cpp  MSBurnPageSample.h  MSHighLightSample.cpp  MSImageFadeSample.cpp  MSImageFadeSample.h  MSMosaicSample.cpp  MSMosaicSample.h  MSTransitionSample.cpp  MSTransitionSample.h  MSWatertoySample.cpp  MSWatertoySample.h
app/src/main/java/com/meishe/msopengles3/: EffectMenuActivity.java  FileUtils.java  LaunchActivity.java  MSOpenGLJNIRender.java  MSPlayer.java  MainActivity.java  MediaPlayStatus.java  RenderEffectActivity.java  ViewPlayerActivity.java
app/src/main/java/com/meishe/msopengles3/capture/: CaptureActivity.java  MSCamera.java  MSOpenCVRender.java
app/src/main/res/layout/: actionbar_layout.xml  activity_capture.xml  activity_effect_menu.xml  activity_lanuch.xml  activity_main.xml  activity_view_player.xml  player_seek_bar_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/meishe/msopengles3/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
